Fixed Boxes not blurring
Rounded boxes' blur was broken, so I added it back in.

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ main{
 
 #blurredContainer{
   width: 350px;
-  height: 500px;\
+  height: 500px;
   background: inherit;
   position: absolute;
   overflow: hidden;
@@ -33,6 +33,7 @@ main{
   margin-left: -175px;
   margin-top: -250px;
   border-radius: 8px;
+  filter: blur();
 }
 
 #blurredContainer:before{
@@ -46,7 +47,7 @@ main{
   right: 0;
   background: inherit;
   box-shadow: inset 0 0 0 200px rgba(255,255,255,0.2);
-  filter: blur(10px);
+  filter: blur(5px);
 }
 
 #avatar{
